Genres component types & fixed z-index

--- a/src/components/layout/Header/header.scss
+++ b/src/components/layout/Header/header.scss
@@ -77,7 +77,7 @@
 	}
 	.header-genres-menu {
 		position: absolute;
-		z-index: 99;
+		z-index: 9999;
 		top: 62px;
 		left: 0px;
 		width: 100%;
